Add triangle and vertex animation code

--- a/webgl3/index.html
+++ b/webgl3/index.html
@@ -12,7 +12,7 @@
 </style>
 <body onload='main()'>
     <h4>draw colored point</h4>
-    <canvas id="canv"></canvas>
+    <canvas id="canv" height="600"></canvas>
 </body>
 <script src="../libs/webgl-utils.js"></script>
 <script src="../libs/webgl-debug.js"></script>
