--- a/webgl6/index.html
+++ b/webgl6/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Webgl-learning 4 draw glBuffer</title>
+        <title>Webgl-learning 6 draw lines</title>
     </head>
     <style>
         #canv {
@@ -11,7 +11,7 @@
         }
     </style>
     <body onload='main()'>
-        <h4>draw glBuffer</h4>
+        <h4>draw gl.LINES, gl.LINE_STRIP, gl.LINE_LOOP and gl.TRIANGLES</h4>
         <canvas id="canv" height="600"></canvas>
     </body>
     <script src="../libs/webgl-utils.js"></script>
@@ -19,5 +19,5 @@
     <script src="../libs/cuon-utils.js"></script>
     <script src="index.js">
     </script>
-    </html>
+</html>
     
