--- a/webgl4/index.html
+++ b/webgl4/index.html
@@ -11,7 +11,7 @@
         }
     </style>
     <body onload='main()'>
-        <h4>draw glBuffer</h4>
+        <h4>draw 1w points with glBuffer</h4>
         <canvas id="canv" height="600"></canvas>
     </body>
     <script src="../libs/webgl-utils.js"></script>
