--- a/webgl3/index.html
+++ b/webgl3/index.html
@@ -11,7 +11,7 @@
     }
 </style>
 <body onload='main()'>
-    <h4>draw colored point</h4>
+    <h4>draw 1w colored point without glBuffer</h4>
     <canvas id="canv" height="600"></canvas>
 </body>
 <script src="../libs/webgl-utils.js"></script>
